--- a/main.html
+++ b/main.html
@@ -7,13 +7,12 @@
 </head>
 <body>
     <div class="container-fluid"> 
-        <nav class="navbar transparent navbar-inverse">
+        <nav class="navbar transparent navbar-inverse nav-color">
           <!-- <div class="container-fluid"> -->
             <ul><img class="logo" src="RL.png"></ul>
             <ul class="nav navbar-nav">
               <li><a id="len1" class="hoverable" href="#">Home</a></li>
               <li><a id="len2" class="hoverable" href="#">About</a></li>
-              <li><a id="len3" class="hoverable" href="#">Portfolio</a></li>
               <li><a id="len4" class="hoverable" href="#">Contact</a></li>
             </ul>
           <!-- </div> -->
